# rust-jwt-auth-boilerplate

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  entity.sh  generate-entity.sh
.github/workflows/: rust-ci.yml
migration/: README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231206_115403_create_user_table.rs
src/: lib.rs  main.rs
src/database/: mod.rs
src/database/migration/src/: m20231206_115403_create_user_table.rs
src/database/mutation/: users.rs
src/database/query/: users.rs
src/middleware/: mod.rs
src/model/: prelude.rs  users.rs
src/models/: mod.rs  post.rs  prelude.rs  user.rs  users.rs
src/routes/: examples.rs  home.rs  mod.rs  users.rs
src/routes/auth/: handlers.rs  mod.rs
src/routes/examples/: mod.rs
src/routes/users/: handlers.rs  mod.rs
src/swagger/: mod.rs
src/swagger/schemas/: home.rs
src/utils/: app_error.rs  jwt.rs  mod.rs  password.rs
