[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
serde = {version = "1.0", features = ["derive"] }
axum = { version = "0.6.1", features = ["macros", "headers"] }
bcrypt = "0.15.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
serde_json = "1.0.89"
serde_with = "3.4.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
