[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.0", features = ["macros"] }
bcrypt = "0.15.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
